# Restaurant

./: .env.example  Dockerfile  manage.py  pyproject.toml
RestaurantMain/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: models.py
templates/: home.html
