[tool.poetry]
name = "restaurant"
version = "0.1.0"
description = ""
authors = ["Oleksandr Chaban"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
python-decouple = "^3.8"
mysqlclient = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
